# fluidic-automation

./: ._.env  .env.example  .gitignore  BACKEND_SETUP.md  Makefile  README.md  cloudflare-pioreactor-config.yml  cloudflared-dashboard.service  cloudflared-pioreactor.service  config.json  fluidic-dashboard.service  index.html  ngrok-pioreactor.service  package-lock.json  package.json  pioreactor-setup.sh  pyproject.toml  requirements.txt  run.command  sync-to-pi.sh  vite.config.js
api/: proxy.js
environnets/: __init__.py  __main__.py
environnets/core/: __init__.py  config.py  experiments.py  models.py  unit_types.py
environnets/ui/: __init__.py  canvas.py  cartoons.py  connection_dialog.py  experiment_panel.py  main_window.py  theme.py  unit_detail.py
src/: Dashboard.jsx  main.jsx
