[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "environnets"
version = "0.1.0"
description = "Bioreactor network control platform"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-Charts>=6.6.0",
    "pyqtgraph>=0.13.3",
    "requests>=2.31.0",
    "numpy>=1.24.0",
]

[project.scripts]
environnets = "environnets.__main__:main"

[tool.setuptools.packages.find]
include = ["environnets*"]
